src/objects/Payroll__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SAP_Payroll</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnTime__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OnTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <inlineHelpText>Last Day of Pay Period</inlineHelpText>
        <label>Pay Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay__c</fullName>
        <formula>Hours__c  *  Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <inlineHelpText>Timesheet submitted date/time</inlineHelpText>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <label>Payroll</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAP-{0000}</displayFormat>
        <label>Payroll Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>